    now, and the current code breaks because abi-names where introduced.
    Since we are no longer supporting 2.4 powerpc kernels, this should go
    also.

  [ Joey Hess ]
  * Remove unused base-installer/kernel/no-kernel template.
  * Support installing no kernel at all if the user doesn't want one.
    Closes: #304802, #247765

 -- Joey Hess <joeyh@debian.org>  Wed, 17 Aug 2005 12:25:46 -0400

base-installer (1.24) unstable; urgency=low

  * Turn link_in_boot on for both i386 and amd64. They should be the same,
    and Kamion points out turning it off for amd64 is a regression.

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Aug 2005 16:41:30 -0400

base-installer (1.23) unstable; urgency=low

  * Avoid using dmesg to guess if the machine is smp on alpha, amd64, and
    i386, since the ring buffer can overflow. Instead, use the new numcpus
    file written by rootskel on these three architectures.
    Closes: #228252, #247371
  * The new smp detection will work too, unlike the old code. Closes: #246483
  * Depend on new enough rootskel.
  * Fix some messages that referred to the debootstrap error log for
    non-debootstrap errors.
  * Move link_in_boot here from rootskel, and rename it to
    base-installer/kernel/linux/link_in_boot. Stuff that assumes it is on
    the initrd will need to be updated.
  * Turn off link_in_boot for amd64 to be same as i386.
  * Parameterise NUMCPUS so the test suite can work.

  * Updated translations: 
    - Catalan (ca.po) by Guillem Jover
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Holger Wansing
    - Esperanto (eo.po) by Serge Leblanc
    - Spanish (es.po) by Javier Fernández-Sanguino Peña
    - Basque (eu.po) by Piarres Beobide
    - Persian (fa.po) by Arash Bijanzadeh
    - French (fr.po) by Christian Perrier
    - Galician (gl.po) by Jacobo Tarrio
    - Japanese (ja.po) by Kenshi Muto
    - Lithuanian (lt.po) by Kęstutis Biliūnas