@@ -4,6 +4,11 @@ arch_get_kernel_flavour () {
 			echo "$SUBARCH"
 			return 0
 		;;
+		ads*)
+			# Currently no kernel in debian for ADS boards.
+			echo "none"
+			return 0
+		;;
 		*)
 			warning "Unknown $ARCH subarchitecture '$SUBARCH'."
 			return 1
@@ -18,5 +23,9 @@ arch_check_usable_kernel () {
 }
 
 arch_get_kernel () {
-	echo "kernel-image-$KERNEL_VERSION-$1"
+	if [ "$1" = none ]; then
+		echo none
+	else
+		echo "kernel-image-$KERNEL_VERSION-$1"
+	fi
 }
